--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Template-2</title>
 </head>
 <body>    
-    
+
     <!-- start home -->
 <div class="home">
     <div class="container">
@@ -31,7 +31,7 @@
                 <li><a class="link" href="#contact">CONTACT</a></li>
             </ul>
             <div class="search">
-                <span class="separator"></span>
+                <span class="line-v"></span>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
