--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <hr class="separator">
         <div class="info">
             <h3 class="hello-word"> HELLO WORD!<br> WE ARE KASPER, WE MAKE ART.</h3>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            <P class="info-home">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Expedita error asperiores voluptate quos? 
                 Nulla sint sit explicabo accusantium 
                 atque! Aliquid labore nostrum animi ipsam adipisci.
@@ -60,6 +60,78 @@
     </div>        
 </div>
     <!-- end home -->
+
+    <!-- start services -->
+<div class="services">
+    <div class="container">
+        <div class="title-services">
+            <h4>SERVICES</h4>
+            <hr class="separotor">
+            <p class="info-services">
+                Lorem ipsum dolor sit amet consectetur
+                 adipisicing vero harum suscipit cum cupiditate?
+            </p>
+        </div>
+        <div class="cont-services">
+            <div class="service-1">
+                <div class="icon-serv-1">
+                    <i></i>
+                </div>
+                <div class="text-serv1">
+                    <h5>Vorem amet intuitive</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Eligendi neque, 
+                        tempore molestiae perspiciatis id cumque saepe repellendus 
+                        ipsum? Officia sequi magni sed?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-2">
+                <div class="icon-serv-2">
+                    <i></i>
+                </div>
+                <div class="text-serv2">
+                    <h5>Vorem amet intuitive</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Eligendi neque, 
+                        tempore molestiae perspiciatis id cumque saepe repellendus 
+                        ipsum? Officia sequi magni sed?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-3">
+                <div class="icon-serv-3">
+                    <i></i>
+                </div>
+                <div class="text-serv3">
+                    <h5>Vorem amet intuitive</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Eligendi neque, 
+                        tempore molestiae perspiciatis id cumque saepe repellendus 
+                        ipsum? Officia sequi magni sed?
+                    </p>
+                </div>
+            </div>
+
+            <div class="service-4">
+                <div class="icon-serv-4">
+                    <i></i>
+                </div>
+                <div class="text-serv4">
+                    <h5>Vorem amet intuitive</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur 
+                        adipisicing elit. Eligendi neque, 
+                        tempore molestiae perspiciatis id cumque saepe repellendus 
+                        ipsum? Officia sequi magni sed?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>       
+</div>
+    <!-- end services -->
     
     
 </body>
