--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
     <!-- start services -->
 <div class="services">
-    <div class="container">
+    <div class="container-services">
         <div class="title-services">
             <h4>SERVICES</h4>
-            <hr class="separotor">
+            <hr class="separator">
             <p class="info-services">
                 Lorem ipsum dolor sit amet consectetur
                  adipisicing vero harum suscipit cum cupiditate?
