--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
             <i class="fa-solid fa-angle-left"></i>
         </div>
     </div>        
-</div>
+</div> 
     <!-- end home -->
 
     <!-- start services -->
 <div class="services">
     <div class="container-services">
+
         <div class="title-services">
             <h4>SERVICES</h4>
             <hr class="separator">
@@ -72,10 +73,11 @@
                  adipisicing vero harum suscipit cum cupiditate?
             </p>
         </div>
+
         <div class="cont-services">
             <div class="service-1">
                 <div class="icon-serv-1">
-                    <i></i>
+                    <i class="fa-solid fa-download"></i>
                 </div>
                 <div class="text-serv1">
                     <h5>Vorem amet intuitive</h5>
@@ -86,12 +88,11 @@
                     </p>
                 </div>
             </div>
-
-            <div class="service-2">
-                <div class="icon-serv-2">
-                    <i></i>
+            <div class="service-1">
+                <div class="icon-serv-1">
+                    <i class="fa-solid fa-gear"></i>
                 </div>
-                <div class="text-serv2">
+                <div class="text-serv1">
                     <h5>Vorem amet intuitive</h5>
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Eligendi neque, 
@@ -100,12 +101,11 @@
                     </p>
                 </div>
             </div>
-
-            <div class="service-3">
-                <div class="icon-serv-3">
-                    <i></i>
+            <div class="service-1">
+                <div class="icon-serv-1">
+                    <i class="fa-solid fa-gear"></i>
                 </div>
-                <div class="text-serv3">
+                <div class="text-serv1">
                     <h5>Vorem amet intuitive</h5>
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Eligendi neque, 
@@ -114,12 +114,11 @@
                     </p>
                 </div>
             </div>
-
-            <div class="service-4">
-                <div class="icon-serv-4">
-                    <i></i>
+            <div class="service-1">
+                <div class="icon-serv-1">
+                    <i class="fa-solid fa-camera"></i>
                 </div>
-                <div class="text-serv4">
+                <div class="text-serv1">
                     <h5>Vorem amet intuitive</h5>
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Eligendi neque, 
