--- a/index.html
+++ b/index.html
@@ -197,14 +197,26 @@
             </div>
         </div>
     
-
         <div class="images">
 
             <div class="top-images">
                 <div class="img">
                     <img src="/images/noir-1.jpg" alt="">
                 </div>
+
                 <div class="img">
+                    <div class="informations">
+
+                        <div class="addition">
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <div class="texts-info">
+                            <h5>Awesome Image</h5>
+                            <span>Photography</span>
+                        </div>
+
+                    </div>
+
                     <img src="/images/noir-2.png" alt="">
                 </div>
                 <div class="img">
