--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
             </div>
 
         </div>
+        <div class="btn">
+            <button>MORE</button>
+        </div>
     </div>
     
     <!-- End Portfolio -->
