portfolio-videos-finished

--- a/index.html
+++ b/index.html
@@ -246,6 +246,14 @@
         <div class="btn">
             <button>MORE</button>
         </div>
+
+        <div class="videos">
+            <div class="infos-video">
+                <h3>SUPER AWESOME VIDEO HERE</h3>
+                <p>Its all you need</p>
+                <button>SEE MORE</button>
+            </div>
+        </div>
     </div>
     
     <!-- End Portfolio -->
