about-us-screens

--- a/index.html
+++ b/index.html
@@ -272,7 +272,17 @@
                 </p>
             </div>
 
-            
+            <div class="screnns">
+                <div class="left-secreen">
+                    <img src="/images/left-screen.png" alt="">
+                </div>
+                <div class="right-secreen">
+                    <img src="/images/midle-screen.png" alt="">
+                </div>
+                <div class="midel-secreen">
+                    <img src="/images/right-screen.png" alt="">
+                </div>
+            </div>
         </div>
     
     </div>
