--- a/index.html
+++ b/index.html
@@ -285,6 +285,45 @@
                 
             </div>
         </div>
+
+        <div class="about-Statistics">
+            <div class="about-Stat">
+
+                <div class="Coffee">
+                    <div class="icons">
+                        <i class="fa-solid fa-eject"></i>
+                        <img src="/images/Hexagon.png" alt="">
+                    </div>
+                    <span class="number">1.263</span>
+                    <p>Coffee Drinks</p>
+                </div>
+                <div class="Coffee">
+                    <div class="icons">
+                        <i class="fa-solid fa-eject"></i>
+                        <img src="/images/Hexagon.png" alt="">
+                    </div>
+                    <span class="number">1.263</span>
+                    <p>Coffee Drinks</p>
+                </div>
+                <div class="Coffee">
+                    <div class="icons">
+                        <i class="fa-solid fa-eject"></i>
+                        <img src="/images/Hexagon.png" alt="">
+                    </div>
+                    <span class="number">1.263</span>
+                    <p>Coffee Drinks</p>
+                </div>
+                <div class="Coffee">
+                    <div class="icons">
+                        <i class="fa-solid fa-eject"></i>
+                        <img src="/images/Hexagon.png" alt="">
+                    </div>
+                    <span class="number">1.263</span>
+                    <p>Coffee Drinks</p>
+                </div>
+
+            </div>
+        </div>
     
     </div>
     <!-- End ABOUT US -->
