--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
                 </div>
                 <div class="basic-pricing">
                     <div class="prix-pricing">
-                        <h5>BASIC</h5>
+                        <h5>PREMIUM</h5>
                         <div class="prix">
                             <i class="fa-solid fa-dollar-sign"></i>
-                            <span>19</span> /MO
+                            <span>29</span> /MO
                         </div>
                     </div>
                     <h5>Feature NO 1</h5>
@@ -441,10 +441,10 @@
                 </div>
                 <div class="basic-pricing">
                     <div class="prix-pricing">
-                        <h5>BASIC</h5>
+                        <h5>PRO</h5>
                         <div class="prix">
                             <i class="fa-solid fa-dollar-sign"></i>
-                            <span>19</span> /MO
+                            <span>39</span> /MO
                         </div>
                     </div>
                     <h5>Feature NO 1</h5>
@@ -457,10 +457,10 @@
                 </div>
                 <div class="basic-pricing">
                     <div class="prix-pricing">
-                        <h5>BASIC</h5>
+                        <h5>PLATINUM</h5>
                         <div class="prix">
                             <i class="fa-solid fa-dollar-sign"></i>
-                            <span>19</span> /MO
+                            <span>49</span> /MO
                         </div>
                     </div>
                     <h5>Feature NO 1</h5>
@@ -473,6 +473,12 @@
                 </div>
             </div>
 
+            <div class="inf-pricing">
+                <p>Contact us if you have special request</p>
+                <div class="bttn">
+                    <button>Contact Us</button>
+                </div>
+            </div>
 
         </div>
     </div> 
