--- a/index.html
+++ b/index.html
@@ -479,8 +479,29 @@
                     <button>Contact Us</button>
                 </div>
             </div>
-
         </div>
+
+        <div class="subscribe">
+            <div class="subscribe-container">
+                <div class="mail-part">
+                    <div class="left">
+                        <i class="fa-solid fa-envelope"></i>
+                        <span>YOUR MAIL</span>
+                    </div>
+                    <div class="right">
+                        Subscribe
+                    </div>
+                </div>
+                <div class="text-">
+                    Lorem ipsum dolor sit amet 
+                    consectetursit amet consectetur 
+                    adipisicing elit. Distinctio 
+                    ut magnam est ipsa ?est ipsa?
+                </div>
+            </div>
+            
+        </div>
+        
     </div> 
 
 
