--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 
         <div class="phones">
             <div class="black-phone">
-                <img src="/images/black-phone.png" alt="">
+                <img src="images/black-phone.png" alt="">
             </div>
             <div class="white-phone">
-                <img src="/images/" alt="">
+                <img src="images/white-phone.png" alt="">
             </div>
         </div>
 
