--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
 
             <div class="screnns">
                 <div class="left-secreen">
-                    <img src="./images/left-screen.png" alt="">
+                    <img src="../images/left-screen.png" alt="">
                 </div>
                 <div class="midel-secreen">
-                    <img src="./images/right-screen.png" alt="">
+                    <img src="../images/right-screen.png" alt="">
                 </div>
                 <div class="right-secreen">
-                    <img src="./images/midle-screen.png" alt="">
+                    <img src="../images/midle-screen.png" alt="">
                 </div>
                 
             </div>
@@ -286,7 +286,7 @@
                 <div class="Coffee">
                     <div class="icons">
                         <i class="fa-solid fa-eject"></i>
-                        <img src="./images/Hexagon.png" alt="">
+                        <img src="../images/Hexagon.png" alt="">
                     </div>
                     <span class="number">1.263</span>
                     <p>Coffee Drinks</p>
@@ -294,7 +294,7 @@
                 <div class="Coffee">
                     <div class="icons">
                         <i class="fa-sharp fa-solid fa-envelope"></i>
-                        <img src="./images/Hexagon.png" alt="">
+                        <img src="../images/Hexagon.png" alt="">
                     </div>
                     <span class="number">256</span>
                     <p>Completed Project</p>
@@ -302,7 +302,7 @@
                 <div class="Coffee">
                     <div class="icons">
                         <i class="fa-solid fa-envelope"></i>
-                        <img src="/images/Hexagon.png" alt="">
+                        <img src="../images/Hexagon.png" alt="">
                     </div>
                     <span class="number">1.743</span>
                     <p>Mail Sent</p>
@@ -310,7 +310,7 @@
                 <div class="Coffee">
                     <div class="icons">
                         <i class="fa-solid fa-eject"></i>
-                        <img src="/images/Hexagon.png" alt="">
+                        <img src="../images/Hexagon.png" alt="">
                     </div>
                     <span class="number">17</span>
                     <p>Awards Received</p>
@@ -542,7 +542,7 @@
     <div class="footer">
         <div class="cont-footer">
             <div class="logo">
-                <img src="./images/logo.png" alt="">
+                <img src="../images/logo.png" alt="">
             </div>
             <h3>WE ARE SOCIAL</h3>
             <div class="icons">
